--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   >
     <div class="rounded bg-light w-50 p-3">
       <h3 class="Bootstrap heading">Uploader un fichier des clients</h3>
-      <form>
+      <form enctype="multipart/form-data">
         <div class="form-group">
         
           <input type="text" class="form-control" placeholder="Nom" />
